# map_navigation

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
data/: config.txt  edges.txt  nodes.txt  roads.txt  spots.txt
qml/: AppButton.qml  AppComboBox.qml  AppTextArea.qml  AppTextField.qml  CustomMenuBar.qml  DraggablePopup.qml  EditActions.qml  EditorPanel.qml  MapEdgesLayer.qml  MapNodeLayer.qml  MapPage.qml  MapWorkspace.qml  MenuButton.qml  NavigationPopups.qml  NearbyPopup.qml  NearbyResultRow.qml  PathDrawer.qml  PathPopup.qml  QueryPopup.qml  Sidebar.qml  SpotEditForm.qml  SpotInfoPopup.qml  SpotListRow.qml  SpotMarkersLayer.qml  SpotPickerRow.qml  TempEdgeLine.qml  main.qml
src/: CampusBackend.cpp  CampusBackend.h  CampusGraph.cpp  CampusGraph.h  Edge.h  MinHeap.h  Node.h  ParserUtils.h  PathFinder.cpp  PathFinder.h  RoadNetwork.cpp  RoadNetwork.h  RoadWithPoints.h  Spot.h  Waypoint.h
